[package]
name = "marvin32-rs"
version = "0.2.0"
authors = ["Damian Gryski <damian@gryski.com>", "Jan Starke <jan.starke@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "bench-marvin32"
harness = false

[dependencies]
hex = "0.4"

[dev-dependencies]
bencher = "0.1"